// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table add value attribute emits an event 1`] = `
Array [
  Object {
    "data": Object {
      "columnId": "source/column",
      "datatype": "http://www.w3.org/2001/XMLSchema#string",
      "language": undefined,
      "predicate": "http://schema.org/name",
      "tableId": "example/table",
    },
    "name": "ValueAttributeAdded",
  },
]
`;

exports[`table add value attribute return expected state 1`] = `
Object {
  "@id": StringMatching /example\\\\/table\\\\/attribute\\\\/\\.\\+/,
  "@type": Array [
    "Attribute",
    "ValueAttribute",
  ],
  "column": "source/column",
  "datatype": "http://www.w3.org/2001/XMLSchema#string",
  "language": undefined,
  "predicate": "http://schema.org/name",
  "tableId": "example/table",
}
`;
